Changed DNA to DSB in multiple places

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -18,4 +18,4 @@ Mutations in proteins of the repair pathway have varying effects on the cell's a
 Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complimentary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its translocation speed and high processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2023}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage and that its interactions with DNA are consistent with its role in initiating the repair process. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that DSBs are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2023} highlighted how the coordination of all RecBCD activities facilitated rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Does the binding time change under different levels of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
 
 % Overview of the article
-To address these questions, we used single-molecule imaging to quantify RecB binding to DNA in living \ecoli\ cells exposed to various concentrations of ciprofloxacin. We measured the duration of the RecB-DNA interaction and found that it was not affected by the ciprofloxacin concentration within the tested range (0 to 30 ng/ml). Concurrent imaging of RecA and the bacterial nucleoid showed RecA structures similar to previously observed bundles and compaction of the bacterial nucleoid, both of which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \geneteneighty\ mutants, and revealed that RecB dissociation depends only on the intrinsic biochemical activities of the complex.
+To address these questions, we used single-molecule imaging to quantify RecB binding to DSBs in living \ecoli\ cells exposed to various concentrations of ciprofloxacin. We measured the duration of the RecB-DSB interaction and found that it was not affected by the ciprofloxacin concentration within the tested range (0 to 30 ng/ml). Concurrent imaging of RecA and the bacterial nucleoid showed RecA structures similar to previously observed bundles and compaction of the bacterial nucleoid, both of which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \geneteneighty\ mutants, and revealed that RecB dissociation depends only on the intrinsic biochemical activities of the complex.
