Fixed short title and Alessia's affiliation

--- a/Article.tex
+++ b/Article.tex
@@ -23,17 +23,17 @@
 
 \begin{document}
 
-\title{ Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DNA Double Strand Break repair in \emph{Escherichia coli}}
-\shorttitle{RecBCD binding time to DNA \emph{in-vivo} is an intrinsic property of the complex}
+\title{Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DNA Double Strand Break repair in \emph{Escherichia coli}}
+\shorttitle{Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DSB repair in \ecoli}
 
 \author[1]{Daniel Thédié}
-\author[2]{Alessia Lepore}
+\author[1,2]{Alessia Lepore}
 \author[1]{Lorna McLaren}
 \author[1,3]{Meriem El Karoui}
 
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
-\affil[2]{Ecole Polytechnique, Paris-Saclay, France}
+\affil[2]{Laboratory for Optics and Biosciences, \'Ecole Polytechnique, Institut Polytechnique de Paris, Palaiseau, France}
 \affil[3]{Ecole Normale Supérieure, Paris-Saclay, France}  % ENS Saclay, to be checked by Meriem
 
 \maketitle
@@ -47,9 +47,9 @@ Although the repair dynamics downstream of RecBCD has been well characterised, i
 % What data did we produce?
 To answer these questions, we imaged RecB at the single-molecule level, and quantified its dynamic behaviour in bacterial cells exposed to ciprofloxacin, an antibiotic that induces DSBs.
 % What is the main finding?
-Our results show that RecB forms long-lived complexes with DSBs (HERE WRITE le time,  15s?). The dissociation of RecB from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. 
+Our results show that RecB forms long-lived complexes with DSBs (10 seconds). The dissociation of RecB from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. 
 % General sentence on what the article contributes
-This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli \emph{in-vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
+This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli \emph{in vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
 
 \end{abstract}
 \begin{comment}
@@ -58,7 +58,7 @@ WHEN referring to RecB binding to DNA, we need to clarify that we are looking ON
 \end{comment}
 
 \begin{keywords}
-    DNA repair | RecBCD | Imaging | \emph{in-vivo}
+    DNA repair | RecBCD | Imaging | \emph{in vivo}
 \end{keywords}
 
 \begin{corrauthor}
